# EvoGym

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENCE.txt  README.md  RoadrunnerDiscussionPoints.txt  VERSION.txt.in  __init__.py.in  azure-pipelines.yml  notes.md  setup.py.in
_src/: CMakeLists.txt  CSV.cpp  EvoRateLaw.cpp  EvoString.cpp  ExperimentSet.cpp  Individual.cpp  Operator.cpp  RandomNetworkGeneratorOptions.cpp
_src/include/evo/: EvoRateLaw.h  EvoString.h  Experiment.h  Individual.h  Motif.h  NetworkComponent.h  Operator.h  Population.h  RandomNetworkGenerator.h  RandomNetworkGeneratorOptions.h  RoleTypes.h  StoicCounter.h  TypeDefs.h  __Unused__RandomNetworkGenerator.h  evo_error.h
_test/: CMakeLists.txt  MockingExample.cpp  SBMLFactory.h  quick_test.cpp
_test/ComparingPythonAndCSpeed/: CMakeLists.txt  in_cpp.cpp
_test/ExperimentTests/: CSVParserTests.cpp
_test/ProfilingModelBuilding/: HowLongDoesItTakeToCreate100NetworksParallel.cpp  results.pickle  time_random_network_generator.py
_test/RandomNetworkGenerationTest/: CMakeLists.txt  GenerateMultipleNetworksWithMPI.cpp  IndividualTests.cpp  RandomNetworkGenerationOptionsTests.cpp  RateLawTests.cpp  plot_stoic_counter_results.py
_test/SOQuestions/: WhyCanINotAccessThisArray.cpp
design/: InitialSpec.tex  rng_design.puml
docs/reports/: main.tex
docs/reports/RandomNetworkGeneration/: random_network_generation.tex
docs/source/: conf.py  index.rst  random_network_generation.rst
docs/src/: index.rst
src/: CMakeLists.txt  CSVParser.cpp  EvoRateLaw.cpp  EvoString.cpp  EvoString.h  Experiment.cpp  ExperimentSet.cpp  IdGen.cpp  Individual.cpp  Motif.cpp  NetworkComponent.cpp  NetworkGenerationOptions.cpp  ObjectiveFunction.cpp  Population.cpp  RandomNetworkGenerator.cpp  RandomNetworkGeneratorOptions.cpp  RandomNumberGenerator.cpp  RateLaw.cpp  StoicCounter.cpp  TypeDefs.h  __Unused__RandomNetworkGenerator.cpp  evo_error.h  logger.h  pystring.cpp  roadrunner_test.cpp  roadrunner_test.h  seed.cpp
src/RandomNetworkGenerator/: CMakeLists.txt  NetworkComponent.cpp  NetworkComponent.h  RNG.cpp  RNGOptions.cpp  RNGOptions.h  RandomNetworkGenerator.cpp  RandomNetworkGenerator.h  RandomNetworkGeneratorCAPI.cpp  RandomNetworkGeneratorOptions.cpp  RandomNetworkGeneratorOptions.h  RoleTypes.h  StoicCounter.h  evoRateLaw.cpp  evoRateLaw.h  pybind_interface.cpp
src/evogen/: CMakeLists.txt  NetworkComponent.h  RNG.cpp  RNG.h  RNGOptions.cpp  RNGOptions.h  RoleTypes.h  StoicCounter.h  evoRateLaw.h  evogen.cpp
src/include/evo/: CSV.h  CSVParser.h  EvoRateLaw.h  EvoString.h  Experiment.h  ExperimentSet.h  IdGen.h  Individual.h  Motif.h  NetworkGenerationOptions.h  ObjectiveFunction.h  PRNG.h  Population.h  RandomNetworkGenerator.h  RandomNetworkGeneratorOptions.h  RandomNumberGenerator.h  RateLaw.h  RoleTypes.h  StoicCounter.h  TypeDefs.h  __Unused__RandomNetworkGenerator.h  evo_error.h  evogym_export.h  pystring.h  seed.h
test/: CMakeLists.txt  EvoStringTests.cpp  HowDoIWantUsersToUseThisTool.py  HowLongDoesItTakeToCreate100Networks.cpp  HowLongDoesItTakeToCreate100NetworksParallel.cpp  IdGenTests.cpp  NCRandomSeed.cpp  NetworkGenerationOptionsTests.cpp  NumCppRNGTest.cpp  RNGMWE.cpp  RandomNetworkGeneratorTests.cpp  RandomNumberGeneratorTests.cpp  RateLawTests.cpp  hello_mpi.cpp  main.cpp  messaround.cpp  quick_test.cpp  test.xml
test/ComparingPythonAndCSpeed/: in_python.py  setup.py
test/ComparingPythonAndCSpeed/in_pybind/: in_pybind.cpp
test/ExperimentTests/: CMakeLists.txt  CSVParserTests.cpp  ExperimentSetTests.cpp  ExperimentTest.cpp  PerturbationExperimentTest.cpp
test/LearningPybind/: CMakeLists.txt  example.cpp
test/Mockups/: MockExperiment.h  MockRandomNetworkGenerator.h
test/ModellingQuestions/: PerturbationMatrixCalculation.py
test/ProfilingModelBuilding/: HowLongDoesItTakeToCreate100RandomNetworks.cpp  HowLongDoesItTakeToCreateNRandomNetworksParallel.cpp  RNGPerformanceResultsWithSimulation.pickle  RNGPerformanceResultsWithoutSimulation.pickle  time_random_network_generator.py
test/RandomNetworkGenerationTest/: CMakeLists.txt  CountInstancesOfStoichiometryMatrices.cpp  NetworkComponentTests.cpp  RandomNetworkGenerationOptionsTests.cpp  RandomNetworkGeneratorTests.cpp  RateLawTests.cpp  StoicCounterTests.cpp  UniqueReactionsRandomNetworkGeneratorTests.cpp  __Unused__RandomNetworkGeneratorTests.cpp  evogen_tests.py  plot_stoic_counter_results.py
test/RoadRunnerQuestion/: CMakeLists.txt  CreateRRModel.h  CreateRRModelCAPI.cpp  TestC.cpp  TestCPP.cpp  create_rr_model_api.py
test/SOQuestions/: CMakeLists.txt
test/SimpleModelEvolution/: CMakeLists.txt  SimpleModelTest.cpp
